js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromChainCallWithCrossModuleInliner/lib1/klass.2.kt
class Klass {
    inline fun foo() = 3
}